Changelog of pam-redhat modules
-------------------------------

This changelog describes only changes after branching of pam-redhat modules
without autoconf support.

0.99.7-1: Fri Jan 19 2007

* removed pam_stack from tarball as it is obsolete and pam_loginuid as well
  because it was included upstream

0.99.6-2: Mon Sep 04 2006

* pam_console: shouldn't call ainit in console.handlers anymore (#199561)
* pam_console_apply: if nonexistent user or group configured as revert
  user.group revert to uid 0 and gid 0 respectively
* pam_timestamp_check: round the sleep to wake up at the start of
  the wallclock second (#205068)

0.99.6-1: Fri Jun 30 2006

* pam_console: add /dev/adsp* to console.perms (#195856)
* pam_console: add /dev/dvb/adapter*/* to console.perms (#195914)
* pam_console_apply: don't access /var when called with -d (#191401)
* pam_timestamp: don't compile hmactest

0.99.5-1: Wed May 10 2006

* pam_console: removed glib dependency, used hashtable implementation
  by Christopher Clark
* pam_tally2: don't call fclose on already closed FILE
* pam_tally2: support large uids

0.99.4-2: Wed Apr 26 2006

* pam_console: fixed device class for /dev/ircomm* (#189966)
* pam_console: handle missing device class gracefully

0.99.4-1: Tue Apr 25 2006

* pam_timestamp: build pam_timestamp_check as PIE
* pam_tally2: added missing ifdef HAVE_LIBAUDIT (#180054)
* pam_console: modified default perms to cover /dev/sequencer* (#184214)
* pam_console: modified default perms to cover /dev/ircomm* (#188385)

0.99.3-1: Fri Feb 03 2006

* Added new module pam_tally2 (partial rewrite of pam_tally)

0.99.2-1: Tue Jan 03 2006

* pam_console: fixed uninitialized value on broken config file 
  (#141053, patch by Jay Fenlason)
* pam_console: man page fixes.
* pam_loginuid: added option require_auditd to require auditd running (Steve Grubb).
* Use pam_prompt instead of direct conversation.

0.99.1-1: Thu Dec 15 2005
