@@ -14,10 +14,9 @@ secureconfdir = $(SCONFIGDIR)
 noinst_HEADERS = hmacsha1.h
 
 AM_CFLAGS = -I$(top_srcdir)/libpam/include -I$(top_srcdir)/libpamc/include
-AM_LDFLAGS = -no-undefined -avoid-version -module \
-	-L$(top_builddir)/libpam -lpam
+AM_LDFLAGS = -L$(top_builddir)/libpam -lpam
 
-pam_timestamp_la_LDFLAGS = -no-undefined -avoid-version -module
+pam_timestamp_la_LDFLAGS = -no-undefined -avoid-version -module $(AM_LDFLAGS)
 if HAVE_VERSIONING
   pam_timestamp_la_LDFLAGS += -Wl,--version-script=$(srcdir)/../modules.map
 endif
@@ -30,7 +29,7 @@ pam_timestamp_la_CFLAGS = $(AM_CFLAGS)
 
 pam_timestamp_check_SOURCES = pam_timestamp_check.c hmacsha1.c sha1.c hmacsha1.h
 pam_timestamp_check_CFLAGS = $(AM_CFLAGS) -fPIE
-pam_timestamp_check_LDFLAGS = -pie
+pam_timestamp_check_LDFLAGS = $(AM_LDFLAGS) -pie
 
 hmacfile_SOURCES = hmacfile.c hmacsha1.c sha1.c hmacsha1.h
 
